fix gap on right side

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,8 @@ hr {
 
 .footer {
   width: 100%;
-  margin-top: 30px;
+  margin-top: 50px;
+  padding-top: 20px;
   /* Set the fixed height of the footer here */
   height: 60px;
   background-color: #f0f0f0;
@@ -38,4 +39,3 @@ hr {
 .footer-icon {
   font-size: 24px !important;
 }
-
